compiler/lume_hir/src/snapshots/lume_hir__lower__tests__class_snapshots@builtin.snap
---
source: compiler/lume_hir/src/lower.rs
expression: "lower(\"class builtin Int32 {}\").unwrap()"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        15249499769657949080: Type(
            Class(
                ClassDefinition {
                    id: 15249499769657949080,
                    type_id: None,
                    name: Int32,
                    builtin: true,
                    members: [],
                    type_parameters: [],
                    location: <internal>:0:22,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
