compiler/lume_hir/src/snapshots/lume_hir__lower__tests__class_snapshots@ext_method.snap
---
source: compiler/lume_hir/src/lower.rs
expression: "lower(r#\"\n                class Foo {\n                    fn external bar() -> Int32\n                }\"#)"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        18213876290066861800: Type(
            Class(
                ClassDefinition {
                    id: 18213876290066861800,
                    type_id: None,
                    name: 'Foo',
                    builtin: false,
                    members: [
                        ExternalMethod(
                            ExternalMethodDefinition {
                                method_id: None,
                                visibility: Private,
                                name: Identifier {
                                    name: "bar",
                                    location: <internal>:61:64,
                                },
                                parameters: [],
                                type_parameters: [],
                                return_type: Some(
                                    Type {
                                        name: 'std.Int32',
                                        type_params: [],
                                        location: <internal>:70:75,
                                    },
                                ),
                                location: <internal>:49:75,
                            },
                        ),
                    ],
                    type_parameters: [],
                    location: <internal>:17:93,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
