compiler/lume_hir/src/snapshots/lume_hir__lower__tests__class_snapshots@method.snap
---
source: compiler/lume_hir/src/lower.rs
expression: "lower(r#\"\n                class Foo {\n                    fn bar() -> Int32 {\n                        return 0;\n                    }\n                }\"#).unwrap()"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        18213876290066861800: Type(
            Class(
                ClassDefinition {
                    id: 18213876290066861800,
                    type_id: None,
                    name: Foo,
                    builtin: false,
                    members: [
                        Method(
                            MethodDefinition {
                                method_id: None,
                                visibility: Private,
                                name: Identifier {
                                    name: "bar",
                                    location: <internal>:52:55,
                                },
                                parameters: [],
                                type_parameters: [],
                                return_type: Some(
                                    Type {
                                        name: std::Int32,
                                        type_params: [],
                                        location: <internal>:61:66,
                                    },
                                ),
                                block: Block {
                                    statements: [
                                        Statement {
                                            id: 0,
                                            kind: Return(
                                                Return {
                                                    id: 0,
                                                    value: Some(
                                                        Expression {
                                                            id: 5871781006564002453,
                                                            location: <internal>:100:101,
                                                            kind: Literal(
                                                                Literal {
                                                                    id: 5871781006564002453,
                                                                    location: <internal>:100:101,
                                                                    kind: Int(
                                                                        IntLiteral {
                                                                            id: 5871781006564002453,
                                                                            value: 0,
                                                                            kind: I32,
                                                                        },
                                                                    ),
                                                                },
                                                            ),
                                                        },
                                                    ),
                                                },
                                            ),
                                            location: <internal>:93:102,
                                        },
                                    ],
                                    location: <internal>:67:124,
                                },
                                location: <internal>:49:124,
                            },
                        ),
                    ],
                    type_parameters: [],
                    location: <internal>:17:142,
                },
            ),
        ),
    },
    statements: {
        0: Statement {
            id: 0,
            kind: Return(
                Return {
                    id: 0,
                    value: Some(
                        Expression {
                            id: 5871781006564002453,
                            location: <internal>:100:101,
                            kind: Literal(
                                Literal {
                                    id: 5871781006564002453,
                                    location: <internal>:100:101,
                                    kind: Int(
                                        IntLiteral {
                                            id: 5871781006564002453,
                                            value: 0,
                                            kind: I32,
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
            location: <internal>:93:102,
        },
    },
    expressions: {
        5871781006564002453: Expression {
            id: 5871781006564002453,
            location: <internal>:100:101,
            kind: Literal(
                Literal {
                    id: 5871781006564002453,
                    location: <internal>:100:101,
                    kind: Int(
                        IntLiteral {
                            id: 5871781006564002453,
                            value: 0,
                            kind: I32,
                        },
                    ),
                },
            ),
        },
    },
}
