compiler/lume_hir/src/snapshots/lume_hir__lower__tests__class_snapshots@property.snap
---
source: compiler/lume_hir/src/lower.rs
expression: "lower(r#\"\n                class Foo {\n                    let x: Int32 = 0;\n                }\"#).unwrap()"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        18213876290066861800: Type(
            Class(
                ClassDefinition {
                    id: 18213876290066861800,
                    type_id: None,
                    name: Foo,
                    builtin: false,
                    members: [
                        Property(
                            Property {
                                prop_id: None,
                                visibility: Private,
                                name: Identifier {
                                    name: "x",
                                    location: <internal>:53:54,
                                },
                                property_type: Type {
                                    name: std::Int32,
                                    type_params: [],
                                    location: <internal>:56:61,
                                },
                                default_value: Some(
                                    Expression {
                                        id: 0,
                                        location: <internal>:64:65,
                                        kind: Literal(
                                            Literal {
                                                id: 0,
                                                location: <internal>:64:65,
                                                kind: Int(
                                                    IntLiteral {
                                                        id: 0,
                                                        value: 0,
                                                        kind: I32,
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                ),
                                location: <internal>:49:66,
                            },
                        ),
                    ],
                    type_parameters: [],
                    location: <internal>:17:84,
                },
            ),
        ),
    },
    statements: {},
    expressions: {
        0: Expression {
            id: 0,
            location: <internal>:64:65,
            kind: Literal(
                Literal {
                    id: 0,
                    location: <internal>:64:65,
                    kind: Int(
                        IntLiteral {
                            id: 0,
                            value: 0,
                            kind: I32,
                        },
                    ),
                },
            ),
        },
    },
}
